Update and rename Car-Rental.html to index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Your Business Name</title>
+  <title>8 DIAMOND CAR RENTAL</title>
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&family=Open+Sans&display=swap" rel="stylesheet">
@@ -169,4 +169,5 @@
     <p>&copy; 8 Diamond Car Rental San Mateo | All Rights Reserved</p>
   </footer>
 </body>
+
 </html>
